@@ -22,6 +22,7 @@ export(Procrustes)
 export(driftVectors)
 export(symdecomp)
 export(fitCircle)
+export(biplotmds)
 
 S3method(print, smacofB)
 S3method(summary, smacofB)
@@ -42,6 +43,9 @@ S3method(plot, smacofJK)
 S3method(jackknife, smacofB)
 S3method(permtest, smacof)
 S3method(permtest, smacofR)
+S3method(biplotmds, smacof)
+S3method(biplotmds, smacofID)
+S3method(plot, mdsbi)
 S3method(print, smacofPerm)
 S3method(plot, smacofPerm)
 S3method(plot, uniscale)
